# TrajectoryZen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Benchmarks/: BenchmarkLP.cpp
Example/: CMakeLists.txt
Examples/: ExampleLP.cpp
Src/: CMakeLists.txt  LinearProgram2DSeidelSolver.cpp  LinearProgram2DSeidelSolver.h
Src/TrajectoryZen/: CMakeLists.txt
Src/TrajectoryZen/Base/: PathBase.h  PointTypeTraits.h  TrajectoryBase.h
Src/TrajectoryZen/SplinePath/: CMakeLists.txt  CubicSplinePath.cpp  CubicSplinePath.h  EigenVectorTraits.h  Utils.h
Src/TrajectoryZen/TrajectoryToppra/: CMakeLists.txt  LinearProgram.cpp  LinearProgram.h
Test/: CMakeLists.txt
